# distributed-media-queue

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  test_part1.ps1
api-server/: Cargo.toml
api-server/src/: main.rs  state.rs
api-server/src/dtos/: mod.rs
api-server/src/error/: mod.rs
api-server/src/handlers/: health_handlers.rs  metrics.rs  mod.rs  task_handlers.rs
api-server/src/routes/: mod.rs
api-server/src/services/: mod.rs  task_service.rs
monitor/: .env.example  Cargo.toml
monitor/src/: dtos.rs  main.rs  routes.rs  state.rs
monitor/src/handlers/: mod.rs
monitor/static/: index.html
shared/: Cargo.toml
shared/examples/: basic_usage.rs
shared/src/: lib.rs  pubsub.rs
shared/src/models/: media.rs  mod.rs  task.rs
shared/src/utils/: mod.rs  mongo_utils.rs  redis_utils.rs
worker/: .env.example  Cargo.toml
worker/src/: engine.rs  main.rs
worker/src/processors/: audio_processor.rs  image_processor.rs  mod.rs  video_processor.rs
