[workspace]
resolver = "2"
members = [
    "shared",
    "api-server",
    "worker",
    "monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JT <jt@example.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Database
mongodb = "2.8"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment
dotenv = "0.15"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
