[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
mongodb = { workspace = true }
redis = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Environment
dotenv = { workspace = true }

# Utilities
futures = "0.3"

# Shared crate
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
