[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Database
mongodb = { workspace = true }
redis = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
