[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
mongodb = { workspace = true }
redis = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Environment
dotenv = { workspace = true }

# Shared crate
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
